# symmetrical-space-yodel

./: .gitignore  App.tsx  README.md  constants.ts  global.d.ts  index-tauri.html  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  server.js  tailwind.config.js  types.ts  vite.config.ts
components/: AIAssistant.tsx  BankAccountCardex.tsx  Calculator.tsx  CalendarTodo.tsx  CategoryManager.tsx  CustomerCardex.tsx  Customers.tsx  Dashboard.tsx  ErrorBoundary.tsx  ErrorScreen.tsx  HelpCenter.tsx  Inventory.tsx  InvoiceList.tsx  InvoicePrintTemplate.tsx  LoadingScreen.tsx  NotificationPanel.tsx  PrintPreviewModal.tsx  PrintPreviewPage.tsx  ProductCardex.tsx  Projects.tsx  RepairReceiptPrintModal.tsx  RepairReceiptPrintTemplate.tsx  RepairReceipts.tsx  Sidebar.tsx  SplashScreen.tsx  SystemLogs.tsx  Taskbar.tsx  Transactions.tsx  TreasuryCalendar.tsx  TreasuryCash.tsx  TreasuryChecks.tsx  Window.tsx  WindowManager.tsx  Workshop.tsx
docs/: ARCHIVE-INDEX.md  BUGS-PENDING.md  FINAL-IMPLEMENTATION-SUMMARY.md  INDEX.md  README.md  REFACTOR_SUMMARY.md
hooks/: useDraft.ts  useFocusRestore.ts  useFormNavigation.ts  useImageUrl.ts  useNotificationSystem.ts
scripts/: clean-build.bat  download-fonts.cjs  test-installation.bat  update-store-2.js  update-store-3.js  update-store-4.js  update-store.js
services/: DataMigrationService.ts  DatabaseService.ts  ImageService.ts  LedgerService.ts  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+174 files in other folders)
